# rust_api

./: .env.example  .gitignore  Cargo.toml  Dockerfile  TODO.md  conference-infrastructure-schema.sql  docker-compose.yml  implementation.md  notes.md  rustfmt.toml
migrations/: 20260324054309_create_users_table.down.sql  20260324054309_create_users_table.sql  20260417034124_create_venue_table.down.sql  20260417034124_create_venue_table.sql  20260417034132_create_group_discounts_table.down.sql  20260417034132_create_group_discounts_table.up.sql  20260417034133_create_conference_table.down.sql  20260417034133_create_conference_table.sql  20260417034133_create_conference_table.up.sql  20260423000001_create_organizations_table.down.sql  20260423000001_create_organizations_table.sql  20260423000002_create_clients_table.down.sql  20260423000002_create_clients_table.up.sql  20260423000003_create_registrations_table.down.sql  20260423000003_create_registrations_table.sql  20260423000003_create_submissions_table.sql  20260423000004_create_participants_table.down.sql  20260423000004_create_participants_table.sql  20260423000005_create_speakers_table.down.sql  20260423000005_create_speakers_table.sql  20260423000005_create_speakers_table.up.sql  20260423000006_create_sponsors_table.down.sql  20260423000006_create_sponsors_table.sql  20260423000007_create_exhibitors_table.down.sql  20260423000007_create_exhibitors_table.up.sql  20260423000008_create_activities_table.down.sql  20260423000008_create_activities_table.up.sql  20260423000009_create_activity_bookings_table.down.sql  20260423000009_create_activity_bookings_table.sql  20260423000010_create_masterclasses_table.down.sql  20260423000010_create_masterclasses_table.up.sql  20260423000011_create_masterclass_instructors_table.down.sql  20260423000011_create_masterclass_instructors_table.up.sql  20260423000012_create_masterclass_bookings_table.down.sql  20260423000012_create_masterclass_bookings_table.sql  20260423000013_create_price_tiers_table.down.sql  20260423000013_create_price_tiers_table.up.sql
old/: config.rs  error.rs
scripts/: create_conferences.sh  create_venues.sh  delete_conference.sh  delete_user.sh  get_conference.sh  get_registration_form.sh  (+9 more)
(+274 files in other folders)
