[package]
name = "web-api"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web Framework
axum = { version = "0.8.8", features = ["macros"] }
tokio = { version = "1.50.0", features = ["full"] }
tower = { version = "0.5.3", features = ["timeout", "limit"] }
tower-http = { version = "0.6.8", features = [
  "cors",
  "trace",
  "compression-gzip",
  "request-id",
  "timeout",
] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Validation
validator = { version = "0.20.0", features = ["derive"] }

# Error Handling
anyhow = "1.0.102"
thiserror = "2.0.18"

# Observability
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1.22.0", features = ["v4", "serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
